--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="reset.css">
 </head>
 <body>
+    <header>
     
-</body>
-</html>
+    </header>
+    <main>
+
+    
+    <footer>
+    </main>
+
+
+
+    </footer>
